fixed FindBugs bugs: DM_NUMBER_CTOR and SIC_INNER_SHOULD_BE_STATIC
git-svn-id: https://server.mycore.de/svn/mycore/trunk@20566 7089d063-bc14-496d-ac90-53de1872eb6c